Modify gitlab.yml for pdoc docs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,7 @@ image: python:3.7-alpine
 test:
   stage: test
   script:
-  - pip install -U sphinx
-  - sphinx-build -b html ./docs/ public
+  - cp -R docs public
   only:
   - branches
   except:
@@ -13,8 +12,7 @@ test:
 pages:
   stage: deploy
   script:
-  - pip install -U sphinx
-  - sphinx-build -b html ./docs/ public
+  - cp -R docs public
   artifacts:
     paths:
     - public
