--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,18 +3,16 @@ image: python:3.7-alpine
 test:
   stage: test
   script:
-  - cp -R docs public
-  only:
-  - branches
-  except:
-  - master
+  - export PYTHONPATH="src"
+  - python tests/TestListMethods.py
 
 pages:
   stage: deploy
   script:
-  - cp -R docs public
+  - apt-get -y install pip3
+  - pip3 install pdoc3
+  - export PYTHONPATH="src"
+  - pdoc3 --html -o public src --force
   artifacts:
     paths:
     - public
-  only:
-  - master
