Update gitlab ci for ttkthemes (2)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ test:
 pages:
   stage: deploy
   script:
+  - apt-get install python-tk
   - pip3 install ttkthemes
   - pip3 install pdoc3
   - export PYTHONPATH="src"
