--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ pages:
   stage: deploy
   script:
   - apk add tk
-  - python3 -m pip3 install git+https://github.com/RedFantom/ttkthemes
+  - python3 -m pip install git+https://github.com/RedFantom/ttkthemes
   - pip3 install ttkthemes
   - pip3 install pdoc3
   - export PYTHONPATH="src"
