--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ pages:
   stage: deploy
   script:
   - apk add tk
+  - apk add zlib-dev
   - pip install --upgrade pip
   - pip install --upgrade pillow
   - pip3 install pdoc3
