--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ pages:
   stage: deploy
   script:
   - apk add tk
-  - apk add jpeg-dev zlib-dev musl-dev
+  - apk add build-base python-dev py-pip jpeg-dev zlib-dev musl-dev
   - export LIBRARY_PATH=/lib:/usr/lib
   - pip install --upgrade pip
   - pip install --upgrade pillow
