Update gitlab ci for ttkthemes (16)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ pages:
   - pip install --upgrade pip
   - pip install --upgrade pillow
   - pip3 install pdoc3
-  - export PYTHONPATH="src"
+  - ls -R ~/.local/lib/
+  - export PYTHONPATH="src:~/.local/lib/python3.7/site-packages/ttkthemes"
   - pdoc3 --html -o public src --force
   artifacts:
     paths:
