--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ pages:
   - pip install --upgrade pip
   - pip install --upgrade pillow
   - pip3 install peewee
+  - pip3 install tkcalendar
   - pip3 install ttkthemes
   - pip3 install pdoc3
   - export PYTHONPATH="src"
