--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,7 @@ test:
 pages:
   stage: deploy
   script:
-  - apk add tk
-  - apk add build-base python-dev py-pip jpeg-dev zlib-dev musl-dev
+  - apk add tk make build-base python-dev py-pip jpeg-dev zlib-dev musl-dev
   - export LIBRARY_PATH=/lib:/usr/lib
   - pip install --upgrade pip
   - pip install --upgrade pillow
